<resources>
    <string name="app_name">wan_android</string>
    <string name="home">首页</string>
    <string name="communication">公众号</string>
    <string name="navigation">导航</string>
    <string name="my">我的</string>
    <string name="errorReload">加载失败,请点击重试!</string>
    <string name="emptyReload">哦！世界都空了,请点击重新加载…!</string>
    <string name="name">名字：</string>
    <string name="share_name">分享人：</string>
    <string name="type">分类：</string>
    <string name="time">时间：</string>
    <string name="signTitle">登陆/注册</string>
    <string name="signInNameHint">昵称</string>
    <string name="signInPasswordHint">密码</string>
    <string name="signUpConfirmPasswordHint">确认密码</string>
    <string name="rememberPassWordInfo">记住密码</string>
    <string name="resetPassWordInfo">忘记密码</string>
    <string name="signIn">登陆</string>
    <string name="signUp">注册</string>
    <string name="goSignUp">去注册</string>
    <string name="goSignIn">去登陆</string>
    <string name="error">错误</string>
    <string name="net_error_info">请检查网络连接...</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="info">提示</string>
</resources>