<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.zcp.wanAndroid.ui.sign.signIn.viewModel.SignInViewModel" />

        <import type="android.view.View" />

        <import type="com.zcp.wanAndroid.R" />

    </data>

    <RelativeLayout
        android:id="@+id/sign_in_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/colorPrimary"
        android:paddingTop="@dimen/grid_15"
        android:paddingBottom="@dimen/grid_15"
        android:paddingEnd="@dimen/grid_4"
        android:paddingStart="@dimen/grid_4"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_background_focused_select"
            android:drawableStart="@drawable/ic_account_circle_select"
            android:drawablePadding="@dimen/grid_2"
            android:hint="@string/signInNameHint"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:padding="@dimen/grid_2" />

        <LinearLayout
            android:id="@+id/input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_user_name"
            android:layout_marginTop="@dimen/grid_4"
            android:gravity="center_vertical"
            android:background="@drawable/custom_edittext_background_selected"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_user_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@null"
                android:drawableStart="@drawable/ic_lock_select"
                android:drawablePadding="@dimen/grid_2"
                android:hint="@string/signInPasswordHint"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:inputType="textVisiblePassword"
                android:padding="@dimen/grid_2" />

            <androidx.appcompat.widget.AppCompatImageView
                android:clickable="true"
                android:id="@+id/iv_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/grid_2"
                android:layout_marginRight="@dimen/grid_2"
                android:background="@drawable/ic_visibility_select"
                />
        </LinearLayout>
        <!--                    app:srcCompat="@{vm.isShowPassWord ? @drawable/ic_visibility_off_select : @drawable/ic_visibility_select}"-->
        <LinearLayout
            android:layout_marginTop="@dimen/grid_4"
            android:id="@+id/remember_password"
            android:layout_below="@+id/input_container"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_remember_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:checked="true"
                android:button="@drawable/ic_check_box_select"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rememberPassWordInfo"
                android:layout_marginStart="@dimen/grid_2"
                android:layout_weight="1.0"
                />
            <TextView
                android:id="@+id/tv_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetPassWordInfo"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_sign_in"
            android:layout_below="@+id/remember_password"
            android:layout_marginTop="@dimen/grid_18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:background="@drawable/button_enable_select"
            android:textColor="@color/White"
            android:textSize="@dimen/large_font"
            />

        <LinearLayout
            android:id="@+id/bt_go_sign_up"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_below="@+id/bt_sign_in"
            android:layout_marginTop="@dimen/grid_9"
            android:gravity="center"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goSignUp"
                android:textColor="@color/White"
                style="@style/H4"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                app:cardCornerRadius="@dimen/grid_6"
                android:layout_marginStart="@dimen/grid_4"
                android:padding="@dimen/grid_4"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/grid_12"
                    android:layout_height="@dimen/grid_12"
                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right"
                    />
            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </RelativeLayout>
</layout>
